tooling/tree-sitter-satsuma/test/corpus/each_flatten.txt
================================================================================
Flatten block
================================================================================

mapping {
  source { commerce_order }
  target { order_line_facts_parquet }
  flatten Order.LineItems -> order_line_facts_parquet {
    .SKU -> sku
    .Quantity -> quantity
  }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (flatten_block
        (src_path
          (field_path
            (identifier)
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))
        (map_arrow
          (src_path
            (relative_field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier))))
        (map_arrow
          (src_path
            (relative_field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier))))))))

================================================================================
Flatten block with metadata
================================================================================

mapping {
  source { orders }
  target { flat_lines }
  flatten items -> flat_lines (note "Explode line items into rows") {
    .sku -> product_code
  }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (flatten_block
        (src_path
          (field_path
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))
        (metadata_block
          (note_tag
            (nl_string)))
        (map_arrow
          (src_path
            (relative_field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier))))))))

================================================================================
Empty flatten block
================================================================================

mapping {
  source { orders }
  target { flat_lines }
  flatten items -> flat_lines {}
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (flatten_block
        (src_path
          (field_path
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))))))

================================================================================
Multiple each/flatten blocks in one mapping
================================================================================

mapping {
  source { commerce_order }
  target { warehouse }
  order_id -> order_key
  each LineItems -> line_items {
    .SKU -> sku
    .Qty -> quantity
  }
  flatten Shipments -> shipment_rows {
    .TrackingNo -> tracking_number
  }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (map_arrow
        (src_path
          (field_path
            (identifier)))
        (tgt_path
          (field_path
            (identifier))))
      (each_block
        (src_path
          (field_path
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))
        (map_arrow
          (src_path
            (relative_field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier))))
        (map_arrow
          (src_path
            (relative_field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier)))))
      (flatten_block
        (src_path
          (field_path
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))
        (map_arrow
          (src_path
            (relative_field_path
              (identifier)))
          (tgt_path
            (field_path
              (identifier))))))))

================================================================================
Each block with nested arrow inside
================================================================================

mapping {
  source { orders }
  target { target }
  each Items -> items {
    .sku -> .product_code
    .discounts -> .discount_lines {
      .code -> .discount_code
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (each_block
        (src_path
          (field_path
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))
        (map_arrow
          (src_path
            (relative_field_path
              (identifier)))
          (tgt_path
            (relative_field_path
              (identifier))))
        (nested_arrow
          (src_path
            (relative_field_path
              (identifier)))
          (tgt_path
            (relative_field_path
              (identifier)))
          (map_arrow
            (src_path
              (relative_field_path
                (identifier)))
            (tgt_path
              (relative_field_path
                (identifier)))))))))

================================================================================
Each block with dotted source path
================================================================================

mapping {
  source { src }
  target { tgt }
  each Order.Items -> items {
    .SKU -> .sku
  }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (each_block
        (src_path
          (field_path
            (identifier)
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))
        (map_arrow
          (src_path
            (relative_field_path
              (identifier)))
          (tgt_path
            (relative_field_path
              (identifier))))))))
