tooling/tree-sitter-satsuma/test/corpus/fragments.txt
================================================================================
Empty fragment body
================================================================================

fragment `audit fields` {}

--------------------------------------------------------------------------------

(source_file
  (fragment_block
    (block_label
      (backtick_name))))

================================================================================
Fragment with fields
================================================================================

fragment `address fields` {
  street_line_1  VARCHAR(200)
  street_line_2  VARCHAR(200)
  city           VARCHAR(100)
  state_province VARCHAR(50)
  postal_code    VARCHAR(20)
  country_code   CHAR(2)
}

--------------------------------------------------------------------------------

(source_file
  (fragment_block
    (block_label
      (backtick_name))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr))
      (field_decl
        (field_name
          (identifier))
        (type_expr))
      (field_decl
        (field_name
          (identifier))
        (type_expr))
      (field_decl
        (field_name
          (identifier))
        (type_expr))
      (field_decl
        (field_name
          (identifier))
        (type_expr))
      (field_decl
        (field_name
          (identifier))
        (type_expr)))))

================================================================================
Fragment with bare identifier name
================================================================================

fragment audit_fields {
  created_at TIMESTAMPTZ (required)
  updated_at TIMESTAMPTZ
  created_by VARCHAR(100)
}

--------------------------------------------------------------------------------

(source_file
  (fragment_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_token
            (identifier))))
      (field_decl
        (field_name
          (identifier))
        (type_expr))
      (field_decl
        (field_name
          (identifier))
        (type_expr)))))

================================================================================
Fragment spread into schema
================================================================================

fragment `audit fields` {
  created_at TIMESTAMPTZ
}

schema customers {
  customer_id UUID (pk)
  ...`audit fields`
}

--------------------------------------------------------------------------------

(source_file
  (fragment_block
    (block_label
      (backtick_name))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr))))
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_token
            (identifier))))
      (fragment_spread
        (spread_label
          (backtick_name))))))

================================================================================
Multiple fragment spreads in schema
================================================================================

schema customers {
  customer_id UUID (pk)
  ...address_fields
  ...audit_fields
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_token
            (identifier))))
      (fragment_spread
        (spread_label
          (identifier)))
      (fragment_spread
        (spread_label
          (identifier))))))
