tooling/tree-sitter-satsuma/test/corpus/lexical.txt
================================================================================
Empty source file
================================================================================



--------------------------------------------------------------------------------

(source_file)

================================================================================
Bare identifier block label
================================================================================

schema customers {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))))

================================================================================
Single-quoted block label
================================================================================

schema `order-headers-parquet` {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (backtick_name))))

================================================================================
Block label with metadata
================================================================================

schema events (pii, domain crm) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_token
        (identifier))
      (tag_with_value
        (identifier)
        (value_text
          (identifier))))))

================================================================================
Fragment block
================================================================================

fragment `US Address` {}

--------------------------------------------------------------------------------

(source_file
  (fragment_block
    (block_label
      (backtick_name))))

================================================================================
Transform block
================================================================================

transform `clean email` {}

--------------------------------------------------------------------------------

(source_file
  (transform_block
    (block_label
      (backtick_name))))

================================================================================
Mapping block with label
================================================================================

mapping crm_to_warehouse {}

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (block_label
      (identifier))))

================================================================================
Mapping block without label
================================================================================

mapping {}

--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
Metric block
================================================================================

metric mrr "MRR" (source fact_subscriptions, grain monthly) {}

--------------------------------------------------------------------------------

(source_file
  (metric_block
    (block_label
      (identifier))
    (nl_string)
    (metadata_block
      (tag_with_value
        (identifier)
        (value_text
          (identifier)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier))))))

================================================================================
Note block with NL string
================================================================================

note {
  "This is a short note."
}

--------------------------------------------------------------------------------

(source_file
  (note_block
    (nl_string)))

================================================================================
Note block with multiline string
================================================================================

note {
  """
  # Heading
  Some content here.
  No double-quotes inside in Phase 1.
  """
}

--------------------------------------------------------------------------------

(source_file
  (note_block
    (multiline_string)))

================================================================================
Triple-quoted string with embedded double quotes
================================================================================

note {
  """
  This supports "as-of" queries: "Which
  warehouses stocked SKU X on 2025-06-15?"
  """
}

--------------------------------------------------------------------------------

(source_file
  (note_block
    (multiline_string)))

================================================================================
Triple-quoted string with two consecutive double quotes
================================================================================

note {
  """
  A value like "" means empty string.
  """
}

--------------------------------------------------------------------------------

(source_file
  (note_block
    (multiline_string)))

================================================================================
Import declaration single name
================================================================================

import { `address fields` } from "lib/common.stm"

--------------------------------------------------------------------------------

(source_file
  (import_decl
    (import_name
      (backtick_name))
    (import_path
      (nl_string))))

================================================================================
Import declaration multiple names
================================================================================

import { `address fields`, `audit fields`, `id fields` } from "lib/common.stm"

--------------------------------------------------------------------------------

(source_file
  (import_decl
    (import_name
      (backtick_name))
    (import_name
      (backtick_name))
    (import_name
      (backtick_name))
    (import_path
      (nl_string))))

================================================================================
NL string with escaped quote
================================================================================

note {
  "She said \"hello\" to the world."
}

--------------------------------------------------------------------------------

(source_file
  (note_block
    (nl_string)))

================================================================================
Backtick name in body
================================================================================

schema salesforce {
  `Lead_Source_Detail__c` STRING
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (backtick_name))
        (type_expr)))))

================================================================================
Line comment
================================================================================

// This is a regular comment
schema customers {}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (schema_block
    (block_label
      (identifier))))

================================================================================
Warning comment
================================================================================

//! This field is deprecated — remove after 2026-Q2
schema customers {}

--------------------------------------------------------------------------------

(source_file
  (warning_comment)
  (schema_block
    (block_label
      (identifier))))

================================================================================
Question comment
================================================================================

//? Should this be split into billing and shipping?
schema customers {}

--------------------------------------------------------------------------------

(source_file
  (question_comment)
  (schema_block
    (block_label
      (identifier))))

================================================================================
Multiple comment types in sequence
================================================================================

// Regular comment
//! Warning comment
//? Question comment
schema customers {}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (warning_comment)
  (question_comment)
  (schema_block
    (block_label
      (identifier))))

================================================================================
Inline comment after block
================================================================================

schema customers {} // inline comment

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier)))
  (comment))

================================================================================
Multiple blocks in file
================================================================================

schema customers {}
schema orders {}
fragment `audit fields` {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier)))
  (schema_block
    (block_label
      (identifier)))
  (fragment_block
    (block_label
      (backtick_name))))

================================================================================
Identifier with hyphen
================================================================================

schema order-headers {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))))

================================================================================
Identifier with underscores and digits
================================================================================

schema fact_subscriptions_2024 {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))))

================================================================================
Quoted name with spaces and special chars
================================================================================

mapping `CRM → Warehouse (v2)` {}

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (block_label
      (backtick_name))))

================================================================================
Keyword rejected as bare label (produces error node)
================================================================================

schema schema {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))))

